--- a/templates/emp/add_emp.html
+++ b/templates/emp/add_emp.html
@@ -76,10 +76,10 @@
                   <div class="mb-3 ">
                     <label for="department">Departments</label>
                     <select name="emp_department" id="department" class="form-control">
-                        <option value="CSE">Computer Science</option>
-                        <option value="ME">Mechanical Engineering</option>
-                        <option value="EE">Electrical Engineering</option>
-                        <option value="CE">Civil Engineering</option>
+                        <option value="DEV">Development</option>
+                        <option value="TESTER">Testing</option>
+                        <option value="SALES">Sales</option>
+                        <option value="HR">Human resource</option>
                     </select>
                   </div>
 
