--- a/templates/emp/update_emp.html
+++ b/templates/emp/update_emp.html
@@ -78,10 +78,11 @@
                 <div class="mb-3 ">
                   <label for="department">Departments</label>
                   <select value="{{emp.department}}" name="emp_department" id="department" class="form-control">
-                      <option value="CSE">Computer Science</option>
-                      <option value="ME">Mechanical Engineering</option>
-                      <option value="EE">Electrical Engineering</option>
-                      <option value="CE">Civil Engineering</option>
+                    <option value="">---Select department---</option>
+                    <option value="DEV">Development</option>
+                    <option value="TESTER">Testing</option>
+                    <option value="SALES">Sales</option>
+                    <option value="HR">Human resource</option>
                   </select>
                 </div>
                 <div class="container text-center">
