--- a/templates/emp/navbar.html
+++ b/templates/emp/navbar.html
@@ -1,22 +1,35 @@
 <nav class="navbar navbar-expand-lg" style="background-color: #39B5E0;">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/emp/home/">Employee Management System</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-              aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {% comment %}
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/emp/home/">Employee Management System</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- Uncomment this if you want a Home link in the navbar -->
+        
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/emp/home/">Home</a>
+        </li>
+       
+        <li class="nav-item">
+          {% if request.user.is_authenticated %}
+           {% if request.user.userprofile.role == 'admin' or request.user.userprofile.role == 'Admin' %}
+            <a href="{% url 'add_emp' %}" class="nav-link">Add Employee</a>
+           {% endif %}
+          {% endif %}
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/emp/home/">View Table</a>
+        </li>
+        {% if not request.user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/emp/home/">Home</a>
-          </li> {% endcomment %}
-          <li class="nav-item">
-            <a class="nav-link" href="/emp/add-emp/">Add Employee</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
           </li>
-          <li><a class="nav-link" href="/emp/home/">View Table</a></li>
-        </ul>
-      </div>
+        {% endif %}
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
